--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "@nestjs/common": "^7.6.13",
     "@nestjs/core": "^7.6.13",
+    "@nestjs/event-emitter": "^1.1.1",
     "@nestjs/jwt": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^7.6.13",
